# segbot_nlp

./: CMakeLists.txt  README  README.md  mainpage.dox  manifest.xml
include/: .Interpreter.h.swp  Interpreter.h  Interpreter.h~  LinguisticElement.h  LinguisticElement.h~  LinguisticStructures.h  LinguisticTree.h  LinguisticTree.h~
include/segbot_nlp/: .VoiceCommandTypes.h.swp  VoiceCommand.h  VoiceCommandTypes.h
launch/: command_module_debug.launch  debug_interpreter.launch
msg/: VoiceCommand.msg
msg_gen/cpp/include/segbot_nlp/: VoiceCommand.h
src/: recording.flac
src/command_module/: .command_node.cpp.swp  basic_command_node.cpp  command_node.cpp
src/debug/: .debug_command_node_tester.cpp.swp  .debug_linguistic_tree.cpp.swp  .lti6.pl.swp  .test.xml.swp  debug_command_node_tester.cpp  debug_linguistic_tree.cpp  lti6.pl  lti6.pl~  test.xml  test.xml.txt
src/gspeech/: gspeech.py  gspeech.py.orig  scrape.pl
src/interpreter/: .interpreter.cpp.swp  .interpreter_node.cpp.swp  Interpreter.cpp  interpreter.cpp  interpreter_node.cpp  recording.flac
src/linguistic_tree/: LinguisticElement.cpp  LinguisticElement.cpp~  LinguisticStructures.cpp  LinguisticStructures.cpp~  LinguisticTree.cpp  LinguisticTree.cpp~
src/segbot_nlp/msg/: _VoiceCommand.py  _VoiceCommand.pyc.orig  __init__.py
